--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
         <ol>
                <li>
                 Smallest gaps between zeros of stationary Gaussian processes (with D. Yao and F. Götze) <br>
-		<I></I>Journal of Functional Analysis</I>, Volume 287, Issue 4, 15 August 2024, 110493.
+		<I>Journal of Functional Analysis</I>, Volume 287, Issue 4, 15 August 2024, 110493.
                  </li>
 
 		 <li>
@@ -212,7 +212,7 @@ Addendum to "Critical Values of Random Analytic Functions on Complex Manifolds" 
 
 
 <li>Zeros and Critical Points of Random Fields <br>
-	PhD thesis, Northwestern University, 2012. </li> 
+	<I>PhD thesis</I>, Northwestern University, 2012. </li> 
 
 </ol>
 
@@ -236,7 +236,12 @@ Addendum to "Critical Values of Random Analytic Functions on Complex Manifolds" 
 
 <I>
 
-Special session on Integrable Systems, Joint NZMS, AustMS and AMS meeting, Auckland, New Zealand, Dec 2024.</I> </li> <li>
+Special session on Integrable Systems, Joint NZMS, AustMS and AMS meeting, Auckland, New Zealand, Dec 2024.</I> </li> 
+	
+	<li>Gaussian random matrices, orthogonal polynomials, and skew-orthogonal polynomials <br>
+Informal Friday Seminar, University of Sydney, Nov 2024.</li>
+	
+	<li>
 
 A quick introduction to random matrices and extreme gap problems <br>
 
