--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Addendum to "Critical Values of Random Analytic Functions on Complex Manifolds" 
 Special session on Integrable Systems, Joint NZMS, AustMS and AMS meeting, Auckland, New Zealand, Dec 2024.</I> </li> 
 	
 	<li>Gaussian random matrices, orthogonal polynomials, and skew-orthogonal polynomials <br>
-Informal Friday Seminar, University of Sydney, Nov 2024.</li>
+<I>Informal Friday Seminar, University of Sydney, Nov 2024.</I>  </li>
 	
 	<li>
 
