--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 <A HREF="http://sydney.edu.au/">University of Sydney</A>, supervised by <A HREF="http://maths.usyd.edu.au/u/geordie/">Prof. Geordie Williamson</A>.  
 <P>
 
-<P>My academic profile at <A HREF= "https://www.maths.usyd.edu.au/u/renjief/">School of Mathematics and Statistics</A> of the University of Sydney. <P><P> My personal homepage at <A HREF="https://www.researchgate.net/profile/Renjie-Feng">ResearchGate </A>. <P>
+<P>My academic profile at <A HREF= "https://www.maths.usyd.edu.au/u/renjief/">School of Mathematics and Statistics</A> of the University of Sydney. <P>
 
 
 
