--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 		arXiv:2301.09216, submitted to <I> Annals of Probability</I>.
             </li>
             <li>
-                Principal minors of GOE (with G. Tian, D. Wei, and D. Yao) <br>
+                Principal minors of Gaussian orthogonal ensemble (with G. Tian, D. Wei, and D. Yao) <br>
 		arXiv:2205.05732, submitted to <I>Transactions of the AMS</I>.
             </li>
             <li>
