--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 <P>
 
 <P>My academic profile at <A HREF= "https://www.maths.usyd.edu.au/u/renjief/">School of Mathematics and Statistics</A> of the University of Sydney. <P>
-<P> My <A HREF= "https://www.researchgate.net/profile/Renjie-Feng"> ResearchGate </A> and <A HREF= "https://scholar.google.com/citations?user=VHndXCgAAAAJ&hl=en"> Google Scholar.</A>  <P>
+<P> My <A HREF= "https://www.researchgate.net/profile/Renjie-Feng"> ResearchGate </A>.  <P>
 
   <TH>Address:</TH>
   <TD>
@@ -57,7 +57,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 
 <H2 STYLE="clear:left">Research Interests</H2>
 
-<P> My research focuses on probability theory and its applications in data science, machine learning, deep learning, AI, statistics, computer science, information theory, and quantum information theory. <P>
+<P> My research focuses on probability theory and its applications in machine learning and deep learning. <P>
 
 <H2>Publications</H2>
 <P><P>
@@ -65,8 +65,14 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 <ol>
     <li>
         <strong>Large gaps of CUE and GUE</strong> (with D. Wei) <br>
-        <I>Annals of Probability</I>, to appear, 2024+.
+        <I>Annals of Probability</I>, to appear, 2025+.
     </li>
+
+   <li>
+        <strong>Critical radii and suprema of random waves over Riemannian manifolds</strong> (with D. Yao and R. Adler) <br>
+        arXiv:2501.10798, submitted, 2025.
+    </li> 
+	
     <li>
         <strong>Smallest gaps between zeros of stationary Gaussian processes</strong> (with D. Yao and F. Götze) <br>
         <I>Journal of Functional Analysis</I>, Volume 287, Issue 4, 15 August 2024, 110493.
@@ -75,10 +81,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
         <strong>Smallest distances between zeros of Gaussian analytic functions</strong> (with D. Yao) <br>
         submitted, 2024.
     </li>
-    <li>
-        <strong>Critical radii and suprema of random waves over Riemannian manifolds</strong> (with D. Yao and R. Adler) <br>
-        preprint, available upon request, 2024.
-    </li>
+ 
     <li>
         <strong>Small gaps for GSE</strong> (with J. Li and D. Yao) <br>
         arXiv:2409.03324, submitted.
