--- a/index.html
+++ b/index.html
@@ -275,6 +275,11 @@ Determinantal point processes on spheres: Multivariate linear statistics <br>
 
 </li>
 
+
+<li>Our recent results in random matrix theory <br>
+<I> Mathematical Challenges in Quantum Physics, PCTS Workshop, Princeton University, USA, March 2023.</I>
+	</li>
+
 <li>
 
 Determinantal point processes on spheres: Multivariate linear statistics <br>
