--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 <P> <P>
 
-I am a <b>Research Fellow in Mathematics and AI</b> at the
+I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 <A HREF="/">School of Mathmatics and Statistics</A> and <A HREF="https://mathematical-research-institute.sydney.edu.au/ ">Sydney Mathematical Research Institute</A>  at the
-<A HREF="http://sydney.edu.au/">University of Sydney</A></A>.  
+<A HREF="http://sydney.edu.au/">University of Sydney</A>, under the supervision of <A HREF="https://www.maths.usyd.edu.au/u/geordie/">Prof. Geordie Williamson</A>A.  
 <P>
 
 <P>My academic profile at <A HREF= "https://www.maths.usyd.edu.au/u/renjief/">School of Mathematics and Statistics</A> of the University of Sydney. <P>
