--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 <ol>
     <li>
         <strong>Large gaps of CUE and GUE</strong> (with D. Wei) <br>
-        <I>Annals of Probability</I>, to appear, 2025+.
+        <I>Annals of Probability</I>,  53(5): 1668-1702 (2025). 
     </li>
 
    <li>
