--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
    
 <ul>
 
- <li>item Critical radii and supremum of random waves over Riemannian manifolds<br>
+ <li>Critical radii and supremum of random waves over Riemannian manifolds<br>
 	<I>The Australian National University, September, 2025. </I></li>
 	
 	<li>A quick introduction to random matrices and extreme gap problems<br>
-        <I></I>Probability Victoria Seminar, online, May 2025.</I></li>
+        <I>Probability Victoria Seminar, online, May 2025.</I></li>
 	
 
 <li> U-statistics for determinantal point processes<br>
