--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 <P> <P>
 
-I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
+I am a <b> Research Fellow </b> at the
 <A HREF="/">School of Mathmatics and Statistics</A> and <A HREF="https://mathematical-research-institute.sydney.edu.au/ ">Sydney Mathematical Research Institute</A>  at the
-<A HREF="http://sydney.edu.au/">University of Sydney</A>, under the supervision of <A HREF="https://www.maths.usyd.edu.au/u/geordie/">Prof. Geordie Williamson</A>.  
+<A HREF="http://sydney.edu.au/">University of Sydney</A>.  
 <P>
 
 <P>My academic profile at <A HREF= "https://www.maths.usyd.edu.au/u/renjief/">School of Mathematics and Statistics</A> of the University of Sydney. <P>
@@ -57,7 +57,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
 
 <H2 STYLE="clear:left">Research Interests</H2>
 
-<P> My research focuses on probability and statistics, and theirs applications in machine learning, deep learning and AI. <P>
+<P> My research focuses on probability theory, especially random matrices and random geometry.  <P>
 
 <H2>Publications</H2>
 <P><P>
@@ -79,7 +79,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
     </li>
     <li>
         <strong>Smallest distances between zeros of Gaussian analytic functions</strong> (with D. Yao) <br>
-        submitted, 2024.
+    to appear in Advances in Mathematics, 2026+. 
     </li>
  
     <li>
@@ -92,7 +92,7 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
     </li>
     <li>
         <strong>Principal minors of Gaussian orthogonal ensemble</strong> (with G. Tian, D. Wei, and D. Yao) <br>
-        arXiv:2205.05732, submitted.
+        arXiv:2205.05732, to appear in Forum Mathematicum, 2026+.
     </li>
     <li>
         <strong>The Berry-Esseen theorem for circular β-ensemble</strong> (with G. Tian and D. Wei) <br>
@@ -183,14 +183,8 @@ I am a <b>Postdoctoral Research Fellow in Mathematics and AI</b> at the
         <strong>Periodic solutions of Abreu's equation</strong> (with G. Szekelyhidi) <br>
         <I>Mathematical Research Letters</I>, 18(6), 1271-1279 (2011).
     </li>
-    <li>
-        <strong>Extreme gap problems in random matrix theory</strong> <br>
-        <I>Surveys in Geometric Analysis</I>, Volume 3, 2019 (2024): 19.
-    </li>
-    <li>
-        <strong>Zeros and Critical Points of Random Fields</strong> <br>
-        <I>PhD thesis</I>, Northwestern University, 2012.
-    </li>
+    
+   
 </ol>
 
 	   
