--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <P> <P>
 
-I am a <b> Research Fellow </b> at the
+I am a Research Fellow at the
 <A HREF="/">School of Mathmatics and Statistics</A> and <A HREF="https://mathematical-research-institute.sydney.edu.au/ ">Sydney Mathematical Research Institute</A>  at the
 <A HREF="http://sydney.edu.au/">University of Sydney</A>.  
 <P>
