--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ I am a Research Fellow at the
         <I>Annals of Probability</I>,  53(5): 1668-1702 (2025). 
     </li>
 
+	  <li>
+        <strong>Smallest distances between zeros of Gaussian analytic functions</strong> (with D. Yao) <br>
+    to appear in Advances in Mathematics, 2026+. 
+    </li>
+
    <li>
         <strong>Critical radii and suprema of random waves over Riemannian manifolds</strong> (with D. Yao and R. Adler) <br>
         arXiv:2501.10798, submitted, 2025.
@@ -77,10 +82,7 @@ I am a Research Fellow at the
         <strong>Smallest gaps between zeros of stationary Gaussian processes</strong> (with D. Yao and F. Götze) <br>
         <I>Journal of Functional Analysis</I>, Volume 287, Issue 4, 15 August 2024, 110493.
     </li>
-    <li>
-        <strong>Smallest distances between zeros of Gaussian analytic functions</strong> (with D. Yao) <br>
-    to appear in Advances in Mathematics, 2026+. 
-    </li>
+  
  
     <li>
         <strong>Small gaps for GSE</strong> (with J. Li and D. Yao) <br>
@@ -92,7 +94,7 @@ I am a Research Fellow at the
     </li>
     <li>
         <strong>Principal minors of Gaussian orthogonal ensemble</strong> (with G. Tian, D. Wei, and D. Yao) <br>
-        arXiv:2205.05732, to appear in Forum Mathematicum, 2026+.
+        <I>Forum Mathematicum</I>, vol. 38, no. 4, 2026, pp. 1187-1209.
     </li>
     <li>
         <strong>The Berry-Esseen theorem for circular β-ensemble</strong> (with G. Tian and D. Wei) <br>
